// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "byId": Object {
    "testRoom": Object {
      "exits": Array [],
      "fileName": undefined,
      "key": "testRoom",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#001",
    },
  },
  "key": "Test",
  "metaData": Array [],
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "byId": Object {
    "a123": Object {
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "welcome",
              },
            },
          ],
          "data": Object {
            "from": "a123",
            "key": "a123#b456",
            "tag": "Exit",
            "to": "b456",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "a123",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#UUID-0",
    },
    "b456": Object {
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "vortex",
              },
            },
          ],
          "data": Object {
            "from": "b456",
            "key": "b456#a123",
            "tag": "Exit",
            "to": "a123",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "b456",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#UUID-1",
    },
  },
  "key": "Test",
  "metaData": Array [],
}
`;

exports[`AssetWorkspace setWML should look up import namespace mappings 1`] = `
Object {
  "byId": Object {
    "a123": Object {
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "welcome",
              },
            },
          ],
          "data": Object {
            "from": "a123",
            "key": "a123#b456",
            "tag": "Exit",
            "to": "b456",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "from": Object {
        "action": "Content",
        "payload": Object {
          "assetId": "testAsset",
          "fromKey": "base",
        },
      },
      "key": "a123",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "testImport",
    },
    "b456": Object {
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "vortex",
              },
            },
          ],
          "data": Object {
            "from": "b456",
            "key": "b456#a123",
            "tag": "Exit",
            "to": "a123",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "b456",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#UUID-0",
    },
    "c789": Object {
      "fileName": undefined,
      "from": Object {
        "action": "Content",
        "payload": Object {
          "assetId": "testAsset",
          "fromKey": "Feature2",
        },
      },
      "key": "c789",
      "tag": "Feature",
      "universalKey": "testFeature",
    },
  },
  "key": "Test",
  "metaData": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "as": "a123",
            "key": "base",
            "tag": "Room",
          },
        },
        Object {
          "children": Array [],
          "data": Object {
            "as": "c789",
            "global": undefined,
            "key": "Feature2",
            "tag": "Feature",
          },
        },
      ],
      "data": Object {
        "from": "testAsset",
        "mapping": Object {},
        "tag": "Import",
      },
    },
  ],
}
`;
